@@ -3,6 +3,7 @@ FOF 3.1.3
 + TimezoneWrangler helper class
 + Automatically refresh the #__extensions version number before fetching updates if it's inconsistent
 ~ Change the way we catch and warn about Container serialization
+# [HIGH] Joomla! changed the way the Calendar field works, stripping the time by default (b/c break)
 # [LOW] Joomla! changed onchange to onChange for JHtml calendar, breaking the Date form filter field in Joomla! 3.6+
 
 FOF 3.1.2
